Mobius Forensic Toolkit 2.18
	* libmobius_core: Added new method database::get_path
	* app-chromium: New function get_db_schema_version (db)
	* app-chromium: Decode Login Data files
	* app-chromium: Decode Login Data For Account files
	* ant.evidence: New module post.user_accounts_from_cookies
	* ant.evidence.vfs.accounts: Remove retrieve from cookies

Mobius Forensic Toolkit 2.17
	* Added new C++ extension called "app-chromium"
	* app-chromium: Retrieve autofill_entry.date_created for versions < 55
	* app-chromium: Retrieve autofill_profiles as User Accounts
	* app-chromium: Retrieve Application Profiles
	* app-chromium: Retrieve Credit Cards
	* app-chromium: Retrieve Personal Direct Identifiers (PDI)
	* app-chromium: Retrieve Received Files
	* app-chromium: Retrieve Visited URLs
	* app-chromium: Added support for History schema version up to 69
	* app-chromium: Added support for Web Data schema version up to 135
	* evidence-viewer: Added attribute "names" to User Accounts
	* evidence-viewer: Added new evidence type "Application Profile"
	* iped-frontend: Changed to use mkisofs' option -udf instead of -J (Joliet)
	* post-processor-pdi: Added new field names
	* libmobius_core: Added new function string::join
	* libmobius_core: Added new method database::has_table
	* libmobius_framework: Added method model::evidence::add_source(folder)
	* ant.evidence.vfs: Added call to app-chromium evidence loader
	* ant.evidence.vfs.autofill: Removed old Chromium code
	* ant.evidence.vfs.received_files: Removed old Chromium code
	* ant.evidence.vfs.visited_urls: Removed old Chromium code

Mobius Forensic Toolkit 2.16
	* Added new C++ extension called "post-processor-pdi"
	* tools/dirfs: Option -d to dump file data
	* evidence-viewer: Added "Evidence Sources" panel
	* evidence-viewer: Added new evidence type "pdi"
	* libmobius_python: Module model moved to framework.model
	* libmobius_python: Module crypt moved to core.crypt